change default image path

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               />
 
               <img
-                src="./images/about1/img.jpg"
+                src="./images/foto_mobile/i_demyanenko/img.jpg"
                 alt="Игорь"
               />
             </picture>
@@ -322,7 +322,7 @@
               />
 
               <img
-                src="./images/about1/img-2.jpg"
+                src="./images/foto_mobile/o_repina/img.jpg"
                 alt="Ольга"
               />
             </picture>
@@ -390,7 +390,7 @@
               />
 
               <img
-                src="./images/about1/img-3.jpg"
+                src="./images/foto_mobile/n_tarasov/img.jpg"
                 alt="Николай"
               />
             </picture>
@@ -458,7 +458,7 @@
           />
 
           <img
-            src="./images/about1/img-4.jpg"
+            src="./images/foto_mobile/m_yermakov/img.jpg"
             alt="Михаил"
           />
         </picture>
