--- a/portfolio.html
+++ b/portfolio.html
@@ -143,7 +143,6 @@
  <!--Проекты -->
       <ul class="card-set list">
         <li class="card-set__item-primary">
-          <div class="card-project">
           <a href="" class="card-project__link link">
           <div class="card-project__wrapper">
             <picture>
@@ -176,16 +175,14 @@
             <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
           </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
           <h3 class="item-title">Технокряк</h3>
           <p lang="ru" class="product-item">Веб-сайт</p>
           </div>
           </a>
-        </div>
         </li>
 
         <li class="card-set__item-primary">
-          <div class="card-project">
             <a href="" class="card-project__link link"> 
             <div class="card-project__wrapper">
               <picture>
@@ -217,12 +214,12 @@
                 <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
             <h3 class="item-title">Постер New Orlean vs Golden Star</h3>
             <p lang="ru" class="product-item">Дизайн</p>
           </div>
       </a>
-    </div>
+  
         </li>
         <li class="card-set__item-primary">
           <div class="card-project">
@@ -258,7 +255,7 @@
               <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
           <h3 class="item-title">Ресторан Seafood</h3>
           <p lang="en" class="product-item">Marketing</p>
         </div>
@@ -301,7 +298,7 @@
               <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
           <h3 class="item-title">Проект Prime</h3>
           <p lang="ru" class="product-item">Маркетинг</p>
         </div>
@@ -343,7 +340,7 @@
             <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
           </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
           <h3 class="item-title">Проект Boxes</h3>
           <p lang="ru" class="product-item">Приложение</p>
         </div>
@@ -385,7 +382,7 @@
               <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
           <h3 class="item-title">Inspiration has no Borders</h3>
           <p lang="ru" class="product-item">Веб-сайт</p>
         </div>
@@ -427,7 +424,7 @@
               <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
           </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
           <h3 class="item-title">Издание Limited Edition</h3>
           <p lang="ru" class="product-item">Дизайн</p>
         </div>
@@ -468,7 +465,7 @@
               <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
           <h3 class="item-title">Проект LAB</h3>
           <p lang="ru" class="product-item">Маркетинг</p>
         </div>
@@ -509,7 +506,7 @@
               <p class="card-project__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-          <div class="name-card">
+          <div class="card-project__name-card">
           <h3 class="item-title">Growing Business</h3>
           <p lang="ru" class="product-item">Приложение</p>
         </div>
