--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     <!--Постоянные Клиенты-->
     <section class="clients">
       <div class="container clients__container">
-          <!--h2 class="about__title">Постоянные клиенты</h2-->
+          <h2 class="about__title">Постоянные клиенты</h2>
           <ul class="client-list card-set list">
               <li class="client-list__item">
                   <a class="icon-link link" href="">
