делает правки по 4 ресабмиту

--- a/index.html
+++ b/index.html
@@ -685,8 +685,9 @@
           <input class="chekbox-square visually-hidden"  type="checkbox" name="confidence" value="checkbox" id="confidence">
           <label for="confidence" class="modal-form-checkbox">
             <span class="unchecked"></span>
-            Соглашаюсь с рассылкой и принимаю&nbsp;
-            <a href="" class="confidence-link">Условия договора</a>
+            <span class="modal-form-checkbox-text">Соглашаюсь с рассылкой и принимаю&nbsp; 
+              <a href="" class="confidence-link">Условия договора</a>
+            </span>
           </label>
               
          <button type="submit" class="submit-btn"><span class="submit-text">Отправить</span></button>
