--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
               placeholder="E-mail"
             />
             <button type="submit" class="sign-up__btn">
-              Подписаться
+              Підписатися
               <svg class="icon-send" width="24" height="24">
                 <use href="./images/sprite/sprite.svg#icon-icon-send"></use>
               </svg>
